# WorklistFilePurger

./: .gitignore  CMakeLists.txt  Plugin.cpp  README  README.md
Framework/Plugins/: Plugin.cpp  Purger.cpp  Purger.h
Plugin/: Plugin.cpp  Purger.cpp  Purger.h
Plugins/: Plugin.cpp  Purger.cpp  Purger.h
Resources/: SyncOrthancFolder.py  WindowsResources.py
Resources/CMake/: LoggingSources.cmake  WorklistRemoverPluginParameters.cmake
Resources/Orthanc/: LinuxStandardBaseToolchain.cmake  MinGW-W64-Toolchain32.cmake  MinGW-W64-Toolchain64.cmake  MinGWToolchain.cmake
Resources/Orthanc/CMake/: AutoGeneratedCode.cmake  Compiler.cmake  DownloadOrthancFramework.cmake  DownloadPackage.cmake  EmbedResources.py  GoogleTestConfiguration.cmake
Resources/Orthanc/Sdk-1.3.1/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Toolchains/: LinuxStandardBaseToolchain.cmake
UnitTest/: UnitTestMain.cpp
UnitTests/: UnitTestMain.cpp  study.txt
